--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   "code-blog":[{
     "title":"Code Blog",
     'description':" A blogging platform where users can publish and manage technical blogs. Features include blog creation, editing, tagging, and search. Designed with a clean UI and responsive layout for easy reading and writing.",
-    "link":"<a href='https://github.com/NoviceProgrammer210/ChatDjango'>Click Here to See</>"
+    "link":"<a href='https://github.com/NoviceProgrammer210/CodeBlog.git'>Click Here to See</>"
   }]
   
 
