--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   "Real-Time Chat Application":[{
     'title':'Real-Time Chat Application',
     'description':` A real-time chat application built with<strong>Django</strong> that supports chat rooms andindividual messaging. Implements WebSocket for livecommunication and includes user authentication and message history.`,
-    "link":"<a href=1https://github.com/NoviceProgrammer210/Chat_Application.git` >Click Here to See</a>"
+    "link":"<a href='https://github.com/NoviceProgrammer210/Chat_Application.git` >Click Here to See</a>"
   }],
   "code-blog":[{
     "title":"Code Blog",
