--- a/index.html
+++ b/index.html
@@ -310,8 +310,12 @@
     "title":"Code Blog",
     'description':" A blogging platform where users can publish and manage technical blogs. Features include blog creation, editing, tagging, and search. Designed with a clean UI and responsive layout for easy reading and writing.",
     "link":"<a href='https://github.com/NoviceProgrammer210/CodeBlog.git'>Click Here to See</>"
+  }],
+   "Real-Time Chat Application":[{
+    'title':'Real-Time Chat Application',
+    'description':` A real-time chat application built with<strong>Django</strong> that supports chat rooms andindividual messaging. Implements WebSocket for livecommunication and includes user authentication and message history.`,
+    "link":"<a href='https://github.com/NoviceProgrammer210/Chat_Application.git` >Click Here to See</a>"
   }]
-  
 
 };
 
