--- a/index.html
+++ b/index.html
@@ -297,27 +297,32 @@
     }, 1000); 
   });
 
-  const projects = {
+const projects = {
   "solar": [
     {
       'title': "Solar green",
-      'description': "Developed a modern e-commerce website for solar products using <strong>React.js</strong> for the front-end and<strong>Node.js with SQL</strong> on the backend. Includesfeatures like user authentication, product listing, filtering, cart system, and admin dashboard.",
-      "link":"<a href='https://github.com/NoviceProgrammer210/Solar-Green' >Click Here to See</a>"
+      'description': "Developed a modern e-commerce website for solar products using <strong>React.js</strong> for the front-end and <strong>Node.js with SQL</strong> on the backend. Includes features like user authentication, product listing, filtering, cart system, and admin dashboard.",
+      "link": "<a href='https://github.com/NoviceProgrammer210/Solar-Green'>Click Here to See</a>"
     }
   ],
  
-  "code-blog":[{
-    "title":"Code Blog",
-    'description':" A blogging platform where users can publish and manage technical blogs. Features include blog creation, editing, tagging, and search. Designed with a clean UI and responsive layout for easy reading and writing.",
-    "link":"<a href='https://github.com/NoviceProgrammer210/CodeBlog.git'>Click Here to See</>"
-  }],
-   "Real-Time Chat Application":[{
-    'title':'Real-Time Chat Application',
-    'description':` A real-time chat application built with<strong>Django</strong> that supports chat rooms andindividual messaging. Implements WebSocket for livecommunication and includes user authentication and message history.`,
-    "link":"<a href='https://github.com/NoviceProgrammer210/Chat_Application.git` >Click Here to See</a>"
-  }]
+  "code-blog": [
+    {
+      "title": "Code Blog",
+      'description': "A blogging platform where users can publish and manage technical blogs. Features include blog creation, editing, tagging, and search. Designed with a clean UI and responsive layout for easy reading and writing.",
+      "link": "<a href='https://github.com/NoviceProgrammer210/CodeBlog.git'>Click Here to See</a>"
+    }
+  ],
 
+  "Real-Time Chat Application": [
+    {
+      'title': 'Real-Time Chat Application',
+      'description': "A real-time chat application built with <strong>Django</strong> that supports chat rooms and individual messaging. Implements WebSocket for live communication and includes user authentication and message history.",
+      "link": "<a href='https://github.com/NoviceProgrammer210/Chat_Application.git'>Click Here to See</a>"
+    }
+  ]
 };
+
 
 const project_box = document.getElementById('project_box');
 project_box.innerHTML = '';
