--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                     </div>
 
                     <!-- Contact Form -->
-                    <div class="glass-effect rounded-2xl p-8">
+                    <!-- <div class="glass-effect rounded-2xl p-8">
                         <h3 class="text-2xl font-bold mb-6">Send Me a Message</h3>
                         <form id="contactForm" class="space-y-6">
                             <div>
@@ -692,7 +692,7 @@
                                 <i class="fas fa-paper-plane mr-2"></i> Send Message
                             </button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
