--- a/index.html
+++ b/index.html
@@ -603,9 +603,9 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-20">
-        <div class="container mx-auto px-6">
-            <div class="max-w-10xl ">
+    <section id="contact" class="py-20 w-full">
+    <div class="w-full px-6">
+        <div class="w-full">
                 <h2 class="text-4xl font-bold text-center mb-4">
                     <span class="gradient-text">Let's Connect</span>
                 </h2>
