Change layout from div to grid for contact section

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                     Feel free to reach out for collaborations or just a friendly hello
                 </p>
 
-                <div class=" gap-12">
+                <div class="grid md:grid-cols-2 gap-12">
                     <!-- Contact Info -->
                     <div class="space-y-8">
                         <div class="glass-effect rounded-2xl p-8">
